# vlm_robot_public

./: .gitignore  LICENSE  README.md
docs/: ARCHITECTURE.md  INSTALL.md  TROUBLESHOOTING.md  technical_report.md
scripts/: _path_demo_pane.sh  analyze_session.sh  capture_frame.py  record_session.sh  start_path_demo.sh
scripts/setup/: install_deps.sh  requirements-vlm.txt  setup_vlm_venv.sh
src/mpc_tracker_cpp/: CMakeLists.txt  package.xml
src/mpc_tracker_cpp/config/: mpc_params.yaml
src/mpc_tracker_cpp/include/mpc_tracker_cpp/: mpc_solver.hpp  path_utils.hpp  vehicle_model.hpp
src/mpc_tracker_cpp/launch/: mpc_tracker.launch.py
src/mpc_tracker_cpp/src/: fake_path_node.cpp  mpc_solver.cpp  mpc_tracker_node.cpp  path_relay_node.cpp  path_utils.cpp  pure_pursuit_node.cpp  test_solver.cpp  vehicle_model.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: bridge.yaml  vlm_robot.rviz
src/robot_bringup/launch/: bridge.launch.py  ground_truth_viz.launch.py  rviz.launch.py
src/robotcar_description/: CMakeLists.txt  package.xml
src/robotcar_description/launch/: display.launch.py
src/robotcar_description/urdf/: robotcar.urdf.xacro
src/robotcar_gazebo/: CMakeLists.txt  package.xml
src/robotcar_gazebo/launch/: gazebo.launch.py  gazebo_spawn_robot.launch.py  spawn_robot.launch.py
src/robotcar_gazebo/models/ground_asphalt/: model.config  model.sdf
src/robotcar_gazebo/models/ground_asphalt/meshes/: ground.mtl
src/robotcar_gazebo/models/signs/sign_left/: model.config  model.sdf
src/robotcar_gazebo/models/signs/sign_left/meshes/: sign.mtl
src/robotcar_gazebo/models/signs/sign_right/: model.config  model.sdf
src/robotcar_gazebo/models/signs/sign_right/meshes/: sign.mtl
src/robotcar_gazebo/models/signs/sign_stop/: model.config  model.sdf
src/robotcar_gazebo/models/signs/sign_stop/meshes/: sign.mtl
src/robotcar_gazebo/models/signs/sign_winding/: model.config  model.sdf
src/robotcar_gazebo/models/signs/sign_winding/meshes/: sign.mtl
src/robotcar_gazebo/worlds/: cone_lane.world.sdf  curved_cone_lane.world.sdf  s_curve.world.sdf  track_cones.world.sdf  track_lines.world.sdf
src/robotcar_localization/: CMakeLists.txt  package.xml
src/robotcar_localization/config/: ekf.yaml  ekf_sf.yaml
src/robotcar_localization/launch/: ekf_sf.launch.py  localization.launch.py
src/robotcar_localization/src/: ekf_sf_node.cpp
src/robotcar_utils_cpp/: CMakeLists.txt  package.xml
src/robotcar_utils_cpp/src/: path_marker_node.cpp
src/robotcar_utils_py/: package.xml  setup.cfg  setup.py
src/robotcar_utils_py/robotcar_utils_py/: cone_marker_node.py  fpv_truth_overlay.py  odom_path_rezero.py  odom_rezero.py  path_drawer_node.py  teleop_keyboard.py
src/vlm_planner_py/: package.xml  setup.cfg  setup.py
src/vlm_planner_py/config/: vlm_params.yaml
src/vlm_planner_py/launch/: vlm_planner.launch.py
src/vlm_planner_py/test/: test_centerline_cloud.py  test_maneuver.py  test_opencv.py  test_sign_latch.py
src/vlm_planner_py/vlm_planner_py/: centerline.py  debugtap.py  image_utils.py  img_convert.py  json_parser.py  maneuver.py  model_runner.py  odom_tf_broadcaster.py  opencv_fallback.py  path_smoother.py  projection.py  sign_latch.py  vlm_node.py  vlm_prompts.py  vlm_sign_node.py
tools/debugkit/: analyze_session.py  plot_tap.py  record_session.py  seslib.py  topics.yaml
