<?xml version="1.0"?>
<package format="3">
  <name>robotcar_utils_cpp</name>
  <version>0.0.1</version>
  <description>C++ utility nodes: path_marker_node (mirrors a ROS nav_msgs/Path
    into the Gazebo Fortress 3D scene via the /marker service).</description>
  <maintainer email="tju.fanke@gmail.com">kefan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>ignition-transport11</depend>
  <depend>ignition-msgs8</depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
